@@ -45,19 +45,22 @@ enum {
 	OPT_LOWERCASE  = 0x8000,
 	OPT_GOST_REVERSE = 0x10000,
 	OPT_BENCH_RAW  = 0x20000,
+	OPT_HEX        = 0x040000,
+	OPT_BASE32     = 0x080000,
+	OPT_BASE64     = 0x100000,
+	OPT_FMT_MODIFIERS = OPT_HEX | OPT_BASE32 | OPT_BASE64,
 
 #ifdef _WIN32
 	OPT_UTF8 = 0x10000000,
 	OPT_ANSI = 0x20000000,
 	OPT_OEM  = 0x40000000,
-	OPT_ENCODING = OPT_UTF8|OPT_ANSI|OPT_OEM,
+	OPT_ENCODING = OPT_UTF8 | OPT_ANSI | OPT_OEM,
 #endif
 
 	FMT_BSD     = 1,
 	FMT_SFV     = 2,
 	FMT_SIMPLE  = 4,
 	FMT_MAGNET  = 8,
-	OPT_FORMAT_MASK = FMT_BSD|FMT_SFV|FMT_SIMPLE|FMT_MAGNET
 };
 
 struct vector_t;
